--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Сайт-визитка — Хамматова Алина</title>
+<title>Репетитор по физике и математике — Хамматова Алина</title>
 
 <style>
 * {
@@ -82,6 +82,7 @@ button {
     background: #00c3ff;
     color: white;
     border: none;
+    cursor: pointer;
 }
 
 footer {
@@ -89,6 +90,11 @@ footer {
     color: white;
     text-align: center;
     padding: 20px;
+}
+
+footer a {
+    color: #00c3ff;
+    text-decoration: none;
 }
 </style>
 </head>
@@ -98,32 +104,43 @@ footer {
 <nav>
     <a href="#home">Главная</a>
     <a href="#about">Обо мне</a>
-    <a href="#portfolio">Портфолио</a>
+    <a href="#portfolio">Занятия</a>
     <a href="#contacts">Контакты</a>
 </nav>
 
 <section id="home">
     <h1>Хамматова Алина</h1>
-    <p>Сайт-визитка студентки группы М531.</p>
+    <h2>Репетитор по физике и математике</h2>
+    <p>Подготовка к ОГЭ и помощь в освоении школьной программы.</p>
 </section>
 
 <section id="about" class="block">
     <h2>Обо мне</h2>
     <p>
-        Я изучаю веб-разработку и создаю простые и удобные сайты.
-        В проектах уделяю внимание адаптивности, структуре и удобству использования.
-        Этот сайт создан как учебное задание и демонстрирует базовые навыки
-        верстки, работы с формами и навигацией.
+        Я студентка программы «Прикладная физика и математика».
+        Провожу индивидуальные занятия по физике и математике
+        для школьников. Помогаю подготовиться к ОГЭ, разобраться
+        со сложными темами и повысить успеваемость.
+    </p>
+    <p>
+        На занятиях объясняю материал простым языком,
+        разбираю типовые задания экзаменов и даю
+        практические задачи для закрепления.
     </p>
 </section>
 
 <section id="portfolio" class="block">
-    <h2>Портфолио</h2>
+    <h2>Как проходят занятия</h2>
     <div class="gallery">
-        <img src="https://via.placeholder.com/400x300" alt="Работа 1">
-        <img src="https://via.placeholder.com/400x300" alt="Работа 2">
-        <img src="https://via.placeholder.com/400x300" alt="Работа 3">
+        <!-- Замени на свои реальные фото -->
+        <img src="https://via.placeholder.com/400x300" alt="Занятие 1">
+        <img src="https://via.placeholder.com/400x300" alt="Занятие 2">
+        <img src="https://via.placeholder.com/400x300" alt="Занятие 3">
     </div>
+    <p style="margin-top:20px;">
+        Индивидуальные занятия онлайн или очно. 
+        Подготовка к контрольным, ОГЭ и помощь с домашними заданиями.
+    </p>
 </section>
 
 <section id="contacts" class="block">
