--- a/index.html
+++ b/index.html
@@ -117,15 +117,28 @@ footer a {
 <section id="about" class="block">
     <h2>Обо мне</h2>
     <p>
-        Я студентка программы «Прикладная физика и математика».
-        Провожу индивидуальные занятия по физике и математике
-        для школьников. Помогаю подготовиться к ОГЭ, разобраться
-        со сложными темами и повысить успеваемость.
+        Меня зовут Хамматова Алина, я студентка программы
+        «Прикладная физика и математика». Параллельно с учебой
+        я занимаюсь репетиторством и помогаю школьникам
+        разобраться с физикой и математикой. Основное
+        направление моей работы — подготовка к ОГЭ,
+        а также помощь в освоении школьной программы.
     </p>
     <p>
-        На занятиях объясняю материал простым языком,
-        разбираю типовые задания экзаменов и даю
-        практические задачи для закрепления.
+        На занятиях я стараюсь объяснять материал простым и
+        понятным языком, без сложных терминов и лишней теории.
+        Главная цель — чтобы ученик не просто запомнил формулы,
+        а понял логику решения задач. Мы вместе разбираем
+        типовые задания, учимся правильно оформлять решения
+        и постепенно повышаем уровень сложности.
+    </p>
+    <p>
+        Занятия проходят в спокойной и дружелюбной атмосфере.
+        Я подбираю задания под уровень ученика, объясняю темы
+        столько раз, сколько нужно, и даю практику для
+        закрепления. Такой подход помогает улучшить оценки,
+        подготовиться к экзаменам и чувствовать себя увереннее
+        на уроках и контрольных работах.
     </p>
 </section>
 
