--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@ footer a {
 <section id="portfolio" class="block">
     <h2>Как проходят занятия</h2>
     <div class="gallery">
-        <!-- Замени на свои реальные фото -->
-        <img src="https://via.placeholder.com/400x300" alt="Занятие 1">
+        <img src="photo1.jpg" alt="Занятие 1">
         <img src="https://via.placeholder.com/400x300" alt="Занятие 2">
         <img src="https://via.placeholder.com/400x300" alt="Занятие 3">
     </div>
@@ -178,7 +177,6 @@ footer a {
     </p>
 
     <div style="margin-top:20px;">
-        <!-- Сюда можно вставить карту -->
         <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample"
             width="100%"
