--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ footer a {
     <h2>Как проходят занятия</h2>
     <div class="gallery">
         <img src="photo1.jpg" alt="Занятие 1">
-        <img src="https://via.placeholder.com/400x300" alt="Занятие 2">
-        <img src="https://via.placeholder.com/400x300" alt="Занятие 3">
+        <img src="photo2.jpg" alt="Занятие 2">
+        <img src="photo3.jpg" alt="Занятие 3">
     </div>
     <p style="margin-top:20px;">
         Индивидуальные занятия онлайн или очно. 
