--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ footer a {
 </section>
 
 <section id="portfolio" class="block">
-    <h2>Как проходят занятия</h2>
+    <h2>Это я :)</h2>
     <div class="gallery">
         <img src="photo1.jpg" alt="Занятие 1">
         <img src="photo2.jpg" alt="Занятие 2">
