--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ section {
 
 #home {
     background: linear-gradient(120deg, #00c3ff, #ffff1c);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .block {
